# Sketchy

./: Cargo.toml  main.ar
analysis/: Cargo.toml
analysis/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  expression.rs  grammar  interner.rs  item.rs  lexer.rs  lib.rs  parser.rs  span.rs  src.rs  tests.rs  util_parsers.rs
parser/src/error/: diagnostic.rs
src/: arrow.pest  bootstrap.rs  cli.rs  error.rs  logger.rs  main.ar  main.rs  test.ar
