[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4"
colored = "2"
ariadne = "0.1.5"
paris = "1.5.13"
chumsky = "0.9.3"
parser = { path = "parser" }
anyhow = "1.0.86"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
use_glob_enum = "deny"
use_unwrap = "deny"
